--- a/src/app/frontend/deploy/deploy.html
+++ b/src/app/frontend/deploy/deploy.html
@@ -28,6 +28,9 @@ limitations under the License.
                          class="md-primary">
           [[Upload a YAML or JSON file|Text for a selection option, which the user must click to upload a YAML/JSON file to deploy from on the deploy page.]]
         </md-radio-button>
+          <md-radio-button value="{{::ctrl.chartOption}}" class="md-primary">
+          [[Deploy a Helm chart|Text for a selection option, which the user must click to select a chart to deploy from on the deploy page.]]
+        </md-radio-button>
       </md-radio-group>
       <kd-user-help>
         [[To learn more, <a href="http://kubernetes.io/docs/user-guide/ui/"
