List deployed helm releases on the workloads page
Copied logic for listing deployments, modified to work for releases.

Used new helm/tiller client to retrieve release details and populate
list.

--- a/src/app/frontend/chrome/nav/nav.html
+++ b/src/app/frontend/chrome/nav/nav.html
@@ -38,6 +38,8 @@ limitations under the License.
     <kd-nav-item class="kd-nav-group-item"
                  state="{{::$ctrl.states.workload}}">[[Workloads|Workloads group menu entry.]]</kd-nav-item>
     <kd-nav-item class="kd-nav-item"
+                 state="{{::$ctrl.states.release}}">[[Releases|Releases menu item in the nav.]]</kd-nav-item>
+    <kd-nav-item class="kd-nav-item"
                  state="{{::$ctrl.states.daemonSet}}">[[Daemon Sets|Daemon Sets menu entry.]]</kd-nav-item>
     <kd-nav-item class="kd-nav-item"
                  state="{{::$ctrl.states.deployment}}">[[Deployments|Deployments menu entry.]]</kd-nav-item>
