Added helm chart repositories to the admin section in the dashboard
Removed a hard-coded custom chart repository
Added display for list to repositories to the admin section
Added ability to add a custom chart repository
Included support for deleting of a chart repository

--- a/src/app/frontend/chrome/nav/nav.html
+++ b/src/app/frontend/chrome/nav/nav.html
@@ -31,6 +31,7 @@ limitations under the License.
                  state="{{::$ctrl.states.role}}">[[Roles|Roles menu entry.]]</kd-nav-item>
     <kd-nav-item class="kd-nav-item"
                  state="{{::$ctrl.states.storageClass}}">[[Storage Classes|Storage Classes menu entry.]]</kd-nav-item>
+    <kd-nav-item class="kd-nav-item" state="{{::$ctrl.states.repository}}">[[Repositories|Repositories menu item in the nav.]]</kd-nav-item>
   </div>
   <div class="kd-nav-group-divider"></div>
   <kd-namespace-select></kd-namespace-select>
